<?xml version="1.0"?>
<package>
  <name>python_pcd</name>
  <version>0.0.1</version>
  <description>The python_pcd package provides python functions to
  save sensor_msgs/PointCloud2 messages as pcd files.</description>



  <maintainer email="cburbridge@gmail.com">Chris Burbridge</maintainer>
  <author email="cburbridge@gmail.com">Chris Burbridge</author>

  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>